<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Min Dag på HV</string>
    <string name="menu_settings">Settings</string>
    <string name="btnLoginText">Ta mig till Min Dag</string>
    <string name="usernameHint">Användarnamn</string>
    <string name="passwordHint">Lösenord</string>
    <string name="txtAbout">Denna app har utvecklats av Crille, Malin, Johan och Victor. Om du visste hur mycket blod
        som ligger bakom utvecklingen av den här appen skulle du omedelbart springa hit och bjuda oss på kaffe. Tycker
        du att appen kan förbättras? Du kan ladda hem källkoden till appen från GitHub:
        http://github.com/di7chro/Min-Dag
    </string>
    <string name="twitterTitle">Tweets från Högskolan Väst</string>
    <string name="menuAboutTxt">Om appen</string>
    <string name="menuPrefsTitle">Inställningar</string>
    <string name="menuPrefsText">Jättekul att du tryckte på den där knappen. Verkligen. Synd bara att den inte gör
        något. Hade den gjort något hade det säkert varit något fantastiskt som hade hänt.
    </string>
    <string name="menuTwitterTxt">HV på Twitter</string>
    <string name="wrongLoginTitle">Fel inloggning</string>
    <string name="wrongLoginText">De uppgifter som du skrev in stämmer inte. Logga in med de uppgifter som du fått av
        IT-enheten vid Högskolan Väst.
    </string>
    <string name="checkingLoginText">Kollar dina uppgifter...</string>
    <string name="menuSaveTitle">Spara dina loginuppgifter</string>
    <string name="menuSaveText">Här kan vi implementera en SQLlite-databas för att spara uppgifterna man matade in.
    </string>
    <string name="menuMailTitle">Kolla mail</string>
    <string name="menuMailText">Öppnar helt enkelt en WebView till studenternas Live-mail sida. Vi behöver inte ta med
        någon login eller så, bara öppna en WebView.
    </string>
    <string name="noNetworkTitle">Ingen anslutning</string>
    <string name="noNetworkText">Du är inte ansluten till Internet. Utan en Internetanslutning kan du väl inte begära
        att jag ska kunna hämta din information?
    </string>
    <string name="networkLoading">Laddar data...</string>
    <string name="menuSettingsTwitterTitle">Inställningar för Twitter</string>
    <string name="menuSettingsMailTitle">Inställningar för Mail</string>
    <string name="menuSettingsLoginTitle">Inställningar för Login</string>
    <string name="settingsUsernameText">Username</string>
    <string name="settingsPasswordText">Password</string>
    <string name="settingLoginOK">Spara inloggning</string>
    <string name="settingLoginText">Ange dina inloggningsuppgifter för att komma åt dina resurser på Högskolan Väst. Du
        skall ange samma uppgifter här som du använder för att komma åt Högskolans övriga resurser. Om du vill ta bort
        dina sparade uppgifter suddar du bort dina uppgifter och sparar.
    </string>
    <string name="settingsTwitterHint">Ange ditt val för vilken Twitterström du vill följa. Det kan antingen vara
        Högskolans officiella ström, tweets taggade #hogskolan_vast eller en egen vald sökterm.
    </string>
    <string name="settingTwitterOfficialText">Högskolans officiella kanal</string>
    <string name="settingTwitterTaggatText">Taggat om Högskolan Väst</string>
    <string name="settingTwitterEgetText">Egen sökterm</string>
    <string name="settingMailHint">Ange vilken som skall vara din läsare för Webmail. Du kan välja mellan att öppna din
        GMail, Windows Live eller en egen vald webbmail.
    </string>
    <string name="settingMailGmail">GMail</string>
    <string name="settingMailLive">Live</string>
    <string name="settingMailEget">Annat</string>
    <string name="menuTTelaTxt">Läs TTela</string>
    <string name="schemaTitle">Mitt Schema</string>
    <string name="settingsMailEgenHint">Ange URL</string>
    <string name="settingsMailButtonText">Spara mitt val</string>
    <string name="settingTwitterOKButtonText">Spara mitt Twitter val</string>
    <string name="settingsMailHintText">Här kan du välja vad som skall öppnas när du trycker "Öppna min mail" i menyn.
        Du kan välja GMail, Live eller en egen sida där du läser dina mail. I sådana fall skriver du in URL till din
        webbmail.
    </string>
    <string name="settingsSchemaHintText">Dessvärre är inte den här delen av appen klar ännu. Däremot var det riktigt
        kul att du tryckte på den där Schema-knappen, men nu när du vet att det inte händer något när man trycker på den
        antar jag att du inte kommer att göra det speciellt många fler gånger. Lite trist är det såklart, men jag antar
        att det är så det skall vara när man är en snutt programkod som ingen brytt sig om att skriva klart.
    </string>
    <string name="settingsSchemaButtonText">Spara schema</string>
    <string name="menuSettingsSchemaTitle">Inställningar för schema</string>
    <string name="loginText">Logga in</string>
    <!--

        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
        <string name=""></string>
    -->
</resources>