<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menuAbout"
            android:icon="@drawable/icon_about"
            android:title="@string/menuAboutTxt"/>
    <item
            android:id="@+id/menuPrefs"
            android:icon="@drawable/icon_settings"
            android:title="@string/menuPrefsTitle"/>
    <item
            android:id="@+id/menuTwitter"
            android:icon="@drawable/icon_twitter"
            android:title="@string/menuTwitterTxt"/>

    <item
            android:id="@+id/menuTTela"
            android:icon="@drawable/icon_ttela"
            android:title="@string/menuTTelaTxt"/>
    <item
            android:id="@+id/menuMail"
            android:icon="@drawable/icon_mail"
            android:title="Öppna min mail"/>
    <item
            android:id="@+id/menuSchema"
            android:icon="@drawable/icon_schema"
            android:title="Schema"/>
</menu>