<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <RadioGroup
            android:id="@+id/settingsRadioMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/settingsRadioGmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingMailGmail"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/settingsRadioLive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingMailLive"/>

        <RadioButton
                android:id="@+id/settingsRadioEget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingMailEget"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settingsMailEgetText"
                android:hint="@string/settingsMailEgenHint"/>
    </RadioGroup>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsMailButtonText"
            android:id="@+id/settingsMailButton"/>

</LinearLayout>