<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
            android:id="@+id/settingLoginTextHint"
            android:text="@string/settingLoginText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
    <EditText
            android:id="@+id/settingsUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/usernameHint">

        <requestFocus/>
    </EditText>

    <EditText
            android:id="@+id/settingsPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/settingLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingLoginOK"/>

</LinearLayout>